--- a/file.html
+++ b/file.html
@@ -1,5 +1,6 @@
-<<<<<<< HEAD
 clone this is new files
 =======
-nsalknskThis is file1
->>>>>>> parent of a92f551... new
+This is file1
+=======
+This is file1
+
